# flake8-jungle

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  catalog-info.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
flake8_jungle/: __init__.py  checker.py
flake8_jungle/rules/: __init__.py  base.py  jg01_model_content_order.py  jg02_model_form.py  jg03_model_fields.py  jg04_try_except_pass.py  jg05_complicated_condition.py  jg06_function_too_long.py  jg07_model_too_long.py  jg08_import_inside_function.py  jg09_logging_format.py  jg10_too_much_patching.py  jg11_structlog_format.py
tests/: run-smoketest.sh  test_complicated_conditon.py  test_function_too_long.py  test_import_inside_function.py  test_logging_format.py  test_model_content_order.py  test_model_fields.py  test_model_form.py  test_model_too_long.py  test_structlog_format.py  test_too_much_patching.py  test_try_except_pass.py  utils.py
tests/fixtures/: bad_logging_format.py  bad_structlog_format.py  complicated_condition.py  function_length_ok.py  function_too_long.py  good_logging_format.py  good_structlog_format.py  import_inside_function.py  import_outside_function.py  model_content_order.py  model_form_exclude.py  model_form_fields.py  model_too_long.py  no_patching.py  simple_condition.py  too_much_patching.py  try_except_logging.py  try_except_pass.py
